- Updated - core/page-list to use Navigation link markup and styles (not sure why WP complicates things)
- Updated - Allow inline CSS for mark formatting on text blocks (headings, paragraph, lists etc)
- Updated - Gutenberg restricted blocks (skipped by our Styles extension) list
- Updated - core/comment-template to load Utilities CSS only if there are comments
- Updated - core/latest-comments and core/latest-posts change render function earlier using metadata filter (rather than render)
- Fixed - ANR -> Captcha 4WP double captcha containers on comment form.
- Fixed - core/cover bug with solid color only background style
- Fixed - Gutteberg Advanced CSS bug in editor when replacing selector with block class
- Fixed - Gutenberg Advanced CSS bug when custom CSS was applied for sidebar block navigation
- Fixed - Markup Select input - bug with placeholder undefined $value variable
- Fixed - Gutenberg Columns gridlines with gutter support
- Added - core/archives custom markup using inputs and navigation as rendering content
- Added - core/code default styleing
- Added - core/tag-cloud default styleing
- Added - missing "sticky-top" class in gutenberg block Advanced class suggestions

v5.5.0
- Fixed - Grid gap default to 1 rem (--wp--custom--gutter variable)

v5.4.9
- Updated - Get WP core colors from 'default' instead of deprecated 'core' ( [ 'settings', 'color', 'palette', 'default' ] )
- Updated - Home starter content
- Updated - core/latest-posts and core/post-template grid classes
- Updated - core/table and core/calendar to load table CSS
- Updated - core/search width styles output
- Removed - Containers CSS - fully updated to Gutenberg (not needed anymore)
- Removed - Cover block inner container class
- Fixed - Editor preview for outline/link button styles (after transfering most of the properties to theme.json)
- Added - Color classes will also output rgb color value in global styles to allow more styleing flexibility